	common run loop modes might get lost; sync panic msg changes from HEAD.

	* unix/tclUnixNotfy.c (Tcl_WaitForEvent): on 64-bit Darwin,
	pthread_cond_timedwait() appears to have a bug that causes it to wait
	forever when passed an absolute time which has already been exceeded by
	the system time; as a workaround, when given a very brief timeout, just
	do a poll on that platform. [Bug 1457797]

2006-08-18  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (Darwin): add support for --enable-64bit on x86_64, for
	universal builds including x86_64, for 64-bit CoreFoundation on Leopard
	and for use of -mmacosx-version-min instead of MACOSX_DEPLOYMENT_TARGET.
	* unix/configure: autoconf-2.13

	* generic/tcl.h:      add fixes for building on Leopard and support for
	* unix/tclUnixPort.h: 64-bit CoreFoundation on Leopard.

	* unix/tclUnixPort.h: on Darwin x86_64, disable use of vfork as it
	causes execve to fail intermittently. (rdar://4685553)
	
	* macosx/README: updates for x86_64 support and Xcode 2.3.

	* unix/tclUnixChan.c (TclUnixWaitForFile): with timeout < 0, if select()
	returns early (e.g. due to a signal), call it again instead of returning
	a timeout result. Fixes intermittent event-13.8 failures.

2006-08-09  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclEncoding.c:	Replace buffer copy in for loop
	with call to memcpy().  Thanks to afredd. [Patch 1530262]

2006-08-03  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tclUnixPipe.c (TclpCreateProcess): for USE_VFORK: ensure standard
	channels are initialized before vfork() so that the child doesn't
	potentially corrupt global state in the parent's address space.

2006-07-30  Kevin Kenny  <kennykb@acm.org>

	* tests/clock.test: Allowed UTC as a synonym for GMT in two
	tests that indirectly invoke 'strftime' with the result of
	'gmtime' to fix a bogus test failure on FreeBSD systems.
	[Bug 1513489].
	
2006-07-30  Joe English  <jenglish@users.sourceforge.net>
